# aligrator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish_crate.yml
examples/: sho_order.rs  sho_response.rs
src/: adaptive_stepping.rs  butcher_tables.rs  euler.rs  lib.rs  runge_kutta.rs  utilities.rs
