[package]
name = "aligrator"
description = "A lightweight numerical integration library."
authors = ["Aleksander Lovric <alexlovric@gmail.com>"]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/alexlovric/aligrator"
documentation = "https://docs.rs/aligrator"
readme = "README.md"
keywords = ["integration", "ode", "runge-kutta"]
categories = ["science", "mathematics", "simulation"]

[lib]
name = "aligrator"
path = "src/lib.rs"
test = true
doctest = false

[dependencies]

